# ConsoleSnake

./: CMakeLists.txt  ConsoleSnake.cbp  ConsoleSnake.depend  ConsoleSnake.layout  ConsoleSnake.xml  README.md  VS2019SLN.bat  appleclass.h  constants.h  level.txt  main.cpp  playerclass.cpp  playerclass.h  pointsclass.h  premake5.lua  unitclass.cpp  unitclass.h
src/: appleclass.cpp  main.cpp  playerclass.cpp  playerclass.h  pointsclass.cpp
